refactor html, css, js for carousel

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div id="wrapper">
             <!-- Main -->
             <div id="main">
-                <!-- One -->
+                <!-- Section One -->
                 <section id="one">
                     <div class="image main" data-position="center">
                         <img src="/portfolio/images/banner.jpeg" alt="" />
@@ -65,9 +65,9 @@
                         </header>
                         <p>I'm a versatile GIS professional with over 20 years of experience blending geospatial analysis, software development, information management, and AI to automate workflows and deliver innovative solutions to complex challenges—both spatial and non-spatial. I have a proven ability to translate complex data into actionable insights and build scalable, end-to-end solutions that drive efficiency and informed decision-making.</p>
                     </div> <!-- End Container -->
-                </section> <!-- End One -->
+                </section> <!-- End Section One -->
 
-                <!-- Two -->
+                <!-- Section Two -->
                 <section id="two">
                     <!-- Container -->
                     <div class="container">
@@ -82,67 +82,86 @@
                             <li class="icon solid fa-globe">Location-based solutions</li>
                         </ul>
                     </div> <!-- End Container -->
-                </section> <!-- End Two -->
+                </section> <!-- End Section Two -->
 
-                <!-- Three -->
-                <section id="three">
+                <!-- Section Three -->
+                <section class="carousel-section" id="three">
+                    <!-- Container -->
                     <div class="container">
                         <h3>A Few Accomplishments</h3>
                         <p>Here are a few highlights from my journey in GIS, Data Science, Generative AI, and creative web development. Each project reflects my passion for solving problems and building engaging digital experiences.</p>
-                        <div class="features">
-                            <!-- LLD Converter API accomplishment -->
-                            <article>
-                                <a href="https://sabank.github.io/LLDConverterAPI/" class="image" target="_blank" title="Click Me">
-                                    <img src="/portfolio/images/lldconverterapi.jpg" alt="LLD Converter API"/>
-                                </a>
-                                <div class="inner">
-                                    <h4>LLD Converter API</h4>
-                                    <p>Transforms complex Legal Land Description into Lat Long coordinates using a lightweight REST API.</p>
-                                    <p><a href="https://github.com/sabank/LLDConverterAPI" target="_blank">GitHub repo</a></p>
-                                </div>
-                            </article> <!-- End LLD Converter API -->
+                        <!-- Swiper -->
+                        <div class="swiper mySwiper">
+                            <!-- Wrapper -->
+                            <div class="swiper-wrapper">
+                                <!-- Slide LLD Converter API -->
+                                <div class="swiper-slide">
+                                    <!-- Media -->
+                                    <div class="media-container">
+                                        <img alt="LLD Converter API" src="/portfolio/images/lldconverterapi.jpg"/>
+                                        <!-- Description -->
+                                        <div class="description">
+                                            <h4>LLD Converter API</h4>
+                                            <p>Transforms complex Legal Land Description into Lat Long coordinates using a lightweight REST API.</p>
+                                            <a href="https://github.com/sabank/LLDConverterAPI" target="_blank">GitHub repo</a>
+                                        </div> <!-- End Description -->
+                                    </div> <!-- End Media -->
+                                </div> <!-- End Slide LLD Converter API -->
 
-                            <!-- Musical Birthday Quest accomplishment -->
-                            <article>
-                                <a href="https://sabank.github.io/MusicalBirthdayQuest/" class="image" target="_blank" title="Click Me">
-                                    <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest"/>
-                                </a>
-                                <div class="inner">
-                                    <h4>Musical Birthday Quest</h4>
-                                    <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
-                                    <p><a href="https://github.com/sabank/MusicalBirthdayQuest" target="_blank">GitHub repo</a></p>
-                                </div>
-                            </article> <!-- End Musical Birthday Quest -->
+                                <!-- Slide Musical Birthday Quest -->
+                                <div class="swiper-slide">
+                                    <!-- Media -->
+                                    <div class="media-container">
+                                        <img alt="Musical Birthday Quest" src="/portfolio/images/musicalbirthdayquest.jpg"/>
+                                        <!-- Description -->
+                                        <div class="description">
+                                            <h4>Musical Birthday Quest</h4>
+                                            <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
+                                            <a href="https://github.com/sabank/MusicalBirthdayQuest" target="_blank">GitHub repo</a>
+                                        </div> <!-- End Description -->
+                                    </div> <!-- End Media -->
+                                </div> <!-- End Slide Musical Birthday Quest -->
                             
-                            <!-- ArcGIS Picture Marker Symbol accomplishment -->
-                            <article>
-                                <video class="image" width="937" height="621" autoplay loop muted playsinline style="max-width:100%;height:auto;" title="ArcGIS Picture Marker Symbol">
-                                    <source src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
-                                <div class="inner">
-                                    <h4>ArcGIS Picture Marker Symbol</h4>
-                                    <p>Demonstrates how to programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
-                                    <p><a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank">Blog article</a></p>
-                                </div>
-                            </article> <!-- End ArcGIS Picture Marker Symbol -->
+                                <!-- Slide ArcGIS Picture Marker Symbol -->
+                                <div class="swiper-slide">
+                                    <!-- Media -->
+                                    <div class="media-container">
+                                        <video autoplay="" loop="" muted="" playsinline="">
+                                        <source src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" type="video/mp4"/>
+                                                    Your browser does not support the video tag.
+                                                    </video>
+                                        <!-- Description -->
+                                        <div class="description">
+                                            <h4>ArcGIS Picture Marker Symbol</h4>
+                                            <p>Demonstrates how to programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
+                                            <a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank">Blog article</a>
+                                        </div> <!-- End Description -->
+                                    </div> <!-- End Media -->
+                                </div> <!-- End Slide ArcGIS Picture Marker Symbol -->
                             
-                            <!-- Snapped dark matter in the wild accomplishment -->
-                            <article>
-                                <a href="#" class="image">
-                                    <img src="/portfolio/images/pic03.jpg" alt="Beyond The Map" />
-                                </a>
-                                <div class="inner">
-                                    <h4>Beyond The Map</h4>
-                                    <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
-                                    <p><a href="https://github.com/sabank/BeyondTheMap" target="_blank">GitHub repo</a></p>
-                                </div>
-                            </article> <!-- End Snapped dark matter in the wild -->
-                        </div>
-                    </div>
-                </section> <!-- End Three -->
+                                <!-- Slide Beyond The Map -->
+                                <div class="swiper-slide">
+                                    <!-- Media -->
+                                    <div class="media-container">
+                                        <img alt="Beyond The Map" src="/portfolio/images/pic03.jpg"/>
+                                        <!-- Description -->
+                                        <div class="description">
+                                            <h4>Beyond The Map</h4>
+                                            <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
+                                            <a href="https://github.com/sabank/BeyondTheMap" target="_blank">GitHub repo</a>
+                                        </div> <!-- End Description -->
+                                    </div> <!-- End Media -->
+                                </div> <!-- End Slide Beyond The Map -->
+                            </div> <!-- End Wrapper -->
+                            <!-- Navigation -->
+                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-pagination"></div>
+                        </div> <!-- End Swiper -->
+                    </div> <!-- End Container -->
+                </section> <!-- End Section Three -->
 
-                <!-- Four -->
+                <!-- Section Four -->
                 <section id="four">
                     <!-- Container -->
                     <div class="container">
@@ -159,7 +178,7 @@
                             </div>
                         </form>
                     </div> <!-- End Container -->
-                </section> <!-- End Four -->
+                </section> <!-- End Section Four -->
             </div> <!-- End Main -->
 
             <!-- Sidebar -->
