--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                 </section> <!-- End Section Two -->
 
                 <!-- Section Three -->
-                <section class="carousel-section" id="three">
+                <section id="three">
                     <!-- Container -->
-                    <div class="container">
+                    <div class="carousel-container">
                         <h3>A Few Accomplishments</h3>
                         <p>Here are a few highlights from my journey in GIS, Data Science, Generative AI, and creative web development. Each project reflects my passion for solving problems and building engaging digital experiences.</p>
                         <!-- Swiper -->
