--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
                 <!-- Section Three -->
                 <section id="three">
                     <!-- Container -->
-                    <div class="carousel-container">
+                    <div class="container">
                         <h3>A Few Accomplishments</h3>
                         <p>Here are a few highlights from my journey in GIS, Data Science, Generative AI, and creative web development. Each project reflects my passion for solving problems and building engaging digital experiences.</p>
                         <!-- Swiper -->
-                        <div class="swiper mySwiper">
+                        <div class="carousel-swiper mySwiper">
                             <!-- Wrapper -->
                             <div class="swiper-wrapper">
                                 <!-- Slide LLD Converter API -->
