--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                 </section> <!-- End Section Two -->
 
                 <!-- Section Three -->
-                <section id="three">
+                <section class=container-section id="three">
                     <!-- Container -->
                     <div class="container">
                         <h3>A Few Accomplishments</h3>
                         <p>Here are a few highlights from my journey in GIS, Data Science, Generative AI, and creative web development. Each project reflects my passion for solving problems and building engaging digital experiences.</p>
                         <!-- Swiper -->
-                        <div class="carousel-swiper mySwiper">
+                        <div class="swiper mySwiper">
                             <!-- Wrapper -->
                             <div class="swiper-wrapper">
                                 <!-- Slide LLD Converter API -->
