--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
                                         <div class="description">
                                             <h4>LLD Converter API</h4>
                                             <p>Transforms complex Legal Land Description into Lat Long coordinates using a lightweight REST API.</p>
-                                            <span style="cursor: not-allowed; position: relative; display: inline-block;">GitHub Repo 🔒>Request Access</span>
+                                            <span class="locked-link">GitHub Repo
+                                                <span class="padlock">🔒</span>
+                                                <span class="tooltip">Request Access</span>
+                                            </span>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
                                 </div> <!-- End Slide LLD Converter API -->
@@ -117,7 +120,10 @@
                                         <div class="description">
                                             <h4>Musical Birthday Quest</h4>
                                             <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
-                                            <span style="cursor: not-allowed; position: relative; display: inline-block;">GitHub Repo 🔒>Request Access</span>
+                                            <span class="locked-link">GitHub Repo
+                                                <span class="padlock">🔒</span>
+                                                <span class="tooltip">Request Access</span>
+                                            </span>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
                                 </div> <!-- End Slide Musical Birthday Quest -->
@@ -148,7 +154,10 @@
                                         <div class="description">
                                             <h4>Beyond The Map</h4>
                                             <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
-                                            <span style="cursor: not-allowed; position: relative; display: inline-block;">GitHub Repo 🔒>Request Access</span>
+                                            <span class="locked-link">GitHub Repo
+                                                <span class="padlock">🔒</span>
+                                                <span class="tooltip">Request Access</span>
+                                            </span>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
                                 </div> <!-- End Slide Beyond The Map -->
