--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
                                         <img alt="Musical Birthday Quest" src="/portfolio/images/musicalbirthdayquest.jpg"/>
                                         <!-- Description -->
                                         <div class="description">
-                                            <h4>Musical Birthday Quest</h4>
+                                            <h4>
+                                                <a href="https://github.com/sabank/MusicalBirthdayQuest" target="_blank">Musical Birthday Quest</a>
+                                            </h4>
                                             <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
                                             <span class="locked-link">GitHub Repo
                                                 <span class="padlock">🔒</span>
@@ -133,9 +135,9 @@
                                     <!-- Media -->
                                     <div class="media-container">
                                         <video autoplay="" loop="" muted="" playsinline="">
-                                        <source src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" type="video/mp4"/>
-                                                    Your browser does not support the video tag.
-                                                    </video>
+                                            <source src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" type="video/mp4"/>
+                                            Your browser does not support the video tag.
+                                        </video>
                                         <!-- Description -->
                                         <div class="description">
                                             <h4>ArcGIS Picture Marker Symbol</h4>
