--- a/index.html
+++ b/index.html
@@ -101,11 +101,13 @@
                                         <img alt="LLD Converter API" src="/portfolio/images/lldconverterapi.jpg"/>
                                         <!-- Description -->
                                         <div class="description">
-                                            <h4>LLD Converter API</h4>
+                                            <h4>
+                                                <a href="https://github.com/sabank/LLDConverterAPI" target="_blank">LLD Converter API</a>
+                                            </h4>
                                             <p>Transforms complex Legal Land Description into Lat Long coordinates using a lightweight REST API.</p>
                                             <span class="locked-link">GitHub Repo
                                                 <span class="padlock">🔒</span>
-                                                <span class="tooltip">Request Access</span>
+                                                <!-- <span class="tooltip">Request Access</span> -->
                                             </span>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
@@ -124,7 +126,7 @@
                                             <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
                                             <span class="locked-link">GitHub Repo
                                                 <span class="padlock">🔒</span>
-                                                <span class="tooltip">Request Access</span>
+                                                <!-- <span class="tooltip">Request Access</span> -->
                                             </span>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
@@ -154,11 +156,13 @@
                                         <img alt="Beyond The Map" src="/portfolio/images/pic03.jpg"/>
                                         <!-- Description -->
                                         <div class="description">
-                                            <h4>Beyond The Map</h4>
+                                            <h4>
+                                                <a href="https://github.com/sabank/BeyondTheMap" target="_blank">Beyond The Map</a>
+                                            </h4>
                                             <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
                                             <span class="locked-link">GitHub Repo
                                                 <span class="padlock">🔒</span>
-                                                <span class="tooltip">Request Access</span>
+                                                <!-- <span class="tooltip">Request Access</span> -->
                                             </span>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
