--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                         <!-- Description -->
                                         <div class="description">
                                             <h4>
-                                                <a href="https://github.com/sabank/LLDConverterAPI" target="_blank">LLD Converter API</a>
+                                                <a href="https://sabank.github.io/LLDConverterAPI/" target="_blank">LLD Converter API</a>
                                             </h4>
                                             <p>Transforms complex Legal Land Description into Lat Long coordinates using a lightweight REST API.</p>
                                             <span class="locked-link">GitHub Repo
@@ -121,7 +121,7 @@
                                         <!-- Description -->
                                         <div class="description">
                                             <h4>
-                                                <a href="https://github.com/sabank/MusicalBirthdayQuest" target="_blank">Musical Birthday Quest</a>
+                                                <a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank">Musical Birthday Quest</a>
                                             </h4>
                                             <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
                                             <span class="locked-link">GitHub Repo
@@ -156,14 +156,9 @@
                                         <img alt="Beyond The Map" src="/portfolio/images/pic03.jpg"/>
                                         <!-- Description -->
                                         <div class="description">
-                                            <h4>
-                                                <a href="https://github.com/sabank/BeyondTheMap" target="_blank">Beyond The Map</a>
-                                            </h4>
+                                            <h4>Beyond The Map</h4>
                                             <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
-                                            <span class="locked-link">GitHub Repo
-                                                <span class="padlock">🔒</span>
-                                                <!-- <span class="tooltip">Request Access</span> -->
-                                            </span>
+                                            <a href="https://github.com/sabank/BeyondTheMap" target="_blank">GitHub repo</a>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
                                 </div> <!-- End Slide Beyond The Map -->
