--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                         <div class="description">
                                             <h4>Beyond The Map</h4>
                                             <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
-                                            <a href="https://github.com/sabank/BeyondTheMap" target="_blank">GitHub repo</a>
+                                            <a href="https://github.com/sabank/BeyondTheMap" target="_blank">GitHub Repo</a>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
                                 </div> <!-- End Slide Beyond The Map -->
