--- a/index.html
+++ b/index.html
@@ -155,11 +155,10 @@
                                     <div class="media-container">
                                         <img alt="Beyond The Map" src="/portfolio/images/pic03.jpg"/>
                                         <!-- Description -->
-                                        <div class="description">
+                                        <a href="https://github.com/sabank/BeyondTheMap" class="description" target="_blank">GitHub Repo
                                             <h4>Beyond The Map</h4>
                                             <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
-                                            <a href="https://github.com/sabank/BeyondTheMap" target="_blank">GitHub Repo</a>
-                                        </div> <!-- End Description -->
+                                        </a> <!-- End Description -->
                                     </div> <!-- End Media -->
                                 </div> <!-- End Slide Beyond The Map -->
                             </div> <!-- End Wrapper -->
