--- a/index.html
+++ b/index.html
@@ -156,9 +156,11 @@
                                         <img alt="Beyond The Map" src="/portfolio/images/pic03.jpg"/>
                                         <!-- Description -->
                                         <div class="description">
-                                            <h4>Beyond The Map</h4>
+                                            <h4>
+                                                <a href="https://github.com/sabank/BeyondTheMap" target="_blank">Beyond The Map</a>
+                                            </h4>
                                             <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
-                                            <a href="https://github.com/sabank/BeyondTheMap" target="_blank">GitHub Repo</a>
+                                            <span class="locked-link">GitHub Repo</span>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
                                 </div> <!-- End Slide Beyond The Map -->
