--- a/index.html
+++ b/index.html
@@ -142,9 +142,11 @@
                                         </video>
                                         <!-- Description -->
                                         <div class="description">
-                                            <h4>ArcGIS Picture Marker Symbol</h4>
+                                            <h4>
+                                                <a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank">ArcGIS Picture Marker Symbol</a>
+                                            </h4>
                                             <p>Demonstrates how to programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
-                                            <a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank">Blog article</a>
+                                            <span class="locked-link">Blog article</span>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
                                 </div> <!-- End Slide ArcGIS Picture Marker Symbol -->
