--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
                                                 <a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank">ArcGIS Picture Marker Symbol</a>
                                             </h4>
                                             <p>Demonstrates how to programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
-                                            <span class="locked-link">Blog article</span>
+                                            <span class="locked-link">Blog article
+                                                <!-- <span class="padlock">🔒</span> -->
+                                                <!-- <span class="tooltip">Request Access</span> -->
+                                            </span>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
                                 </div> <!-- End Slide ArcGIS Picture Marker Symbol -->
@@ -162,7 +165,10 @@
                                                 <a href="https://github.com/sabank/BeyondTheMap" target="_blank">Beyond The Map</a>
                                             </h4>
                                             <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
-                                            <span class="locked-link">GitHub Repo</span>
+                                            <span class="locked-link">GitHub Repo
+                                                <!-- <span class="padlock">🔒</span> -->
+                                                <!-- <span class="tooltip">Request Access</span> -->
+                                            </span>
                                         </div> <!-- End Description -->
                                     </div> <!-- End Media -->
                                 </div> <!-- End Slide Beyond The Map -->
