--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                             <h4>
                                                 <a href="https://sabank.github.io/LLDConverterAPI/" target="_blank">LLD Converter API</a>
                                             </h4>
-                                            <p>Transforms complex Legal Land Description into Lat Long coordinates using a lightweight REST API.</p>
+                                            <p>Convert Alberta LLDs into geographic coordinates using a simple web application.</p>
                                             <span class="locked-link">GitHub Repo
                                                 <span class="padlock">🔒</span>
                                                 <!-- <span class="tooltip">Request Access</span> -->
@@ -123,7 +123,7 @@
                                             <h4>
                                                 <a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank">Musical Birthday Quest</a>
                                             </h4>
-                                            <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
+                                            <p>Combine interactive gameplay with music knowledge for a unique and engaging experience.</p>
                                             <span class="locked-link">GitHub Repo
                                                 <span class="padlock">🔒</span>
                                                 <!-- <span class="tooltip">Request Access</span> -->
@@ -145,7 +145,7 @@
                                             <h4>
                                                 <a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank">ArcGIS Picture Marker Symbol</a>
                                             </h4>
-                                            <p>Demonstrates how to programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
+                                            <p>Programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
                                             <span class="locked-link">Blog article
                                                 <!-- <span class="padlock">🔒</span> -->
                                                 <!-- <span class="tooltip">Request Access</span> -->
@@ -164,7 +164,7 @@
                                             <h4>
                                                 <a href="https://github.com/sabank/BeyondTheMap" target="_blank">Beyond The Map</a>
                                             </h4>
-                                            <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
+                                            <p>Use GIS and automation to convert import data into 3D visuals that reveal trade patterns and inform decisions.</p>
                                             <span class="locked-link">GitHub Repo
                                                 <!-- <span class="padlock">🔒</span> -->
                                                 <!-- <span class="tooltip">Request Access</span> -->
