update slides in carousel

--- a/index.html
+++ b/index.html
@@ -158,7 +158,10 @@
                                 <div class="swiper-slide">
                                     <!-- Media -->
                                     <div class="media-container">
-                                        <img alt="Beyond The Map" src="/portfolio/images/pic03.jpg"/>
+                                        <video autoplay="" loop="" muted="" playsinline="">
+                                            <source src="/portfolio/images/beyondTheMap.mp4" type="video/mp4"/>
+                                            Your browser does not support the video tag.
+                                        </video>
                                         <!-- Description -->
                                         <div class="description">
                                             <h4>
