--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                 <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Your Name" required /></div>
                                 <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email" required /></div>
                                 <div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4" required></textarea></div>
-                                <div class="col-12"><input type="submit" value="Send Message" class="primary"/></div>
+                                <div class="col-12"><input type="submit" value="Send" class="primary"/></div>
                                 <div class="col-12">
                                     <p>Note: This form is for demonstration purposes only and does not send emails.</p>
                             </div>
