--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <section id="footer">
                 <div class="container">
                     <ul class="copyright">
-                        <li>&copy; 2025 Samy Bouma Ngock. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                        <li>&copy; 2025 Samy Bouma Ngock. All rights reserved.</li><li>Design inspired by: <a href="http://html5up.net">HTML5 UP</a></li>
                     </ul>
                 </div>
             </section> <!-- End Footer -->
